--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,23 @@
   --grid-rows: 1;
 }
 
+button {
+  margin:0 auto;
+  display:block;
+}
+
+.button {
+  background-color: #04AA6D;
+  border: none;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  border-radius: 12px;
+  width: 5%;
+}
+
 .mybox {
   display: flex;
   align-items: center;
@@ -13,14 +30,14 @@
   display: grid;
   grid-template-rows: repeat(var(--grid-rows), 1fr);
   grid-template-columns: repeat(var(--grid-cols), 1fr);
-  height: 98vh;
-  width: 98vh;
+  height: 90vh;
+  width: 90vh;
   align-content: center;
   justify-content: center; 
+  margin: 5px;
 }
 
 .grid-item {
-  padding: 1em;
   border: 1px solid #ddd;
   text-align: center;
   aspect-ratio: 1;
